test/acceptance/validating/failing/type-with-bad-prepositions.spun
type in "foo" in "bar"
